[tool.poetry]
name = "serialwriter"
version = "0.1.0"
description = "Write binary data from a file to the serial port"
authors = ["Damian Silbergleith <dsilbergleith+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
hexdump = "^3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
